[gd_scene load_steps=8 format=3 uid="uid://dl8tbmqlmed3s"]

[ext_resource type="Script" path="res://assets/scripts/EnvironmentalAreas.gd" id="1_ufwa4"]
[ext_resource type="PackedScene" uid="uid://br3n44tptuhlc" path="res://assets/scenes/Snake.tscn" id="2_gsgy3"]
[ext_resource type="Texture2D" uid="uid://gyru0gcwiol6" path="res://assets/sprites/circle.svg" id="3_4uf4f"]
[ext_resource type="Script" path="res://assets/scripts/Meter.gd" id="3_kv1wc"]
[ext_resource type="PackedScene" uid="uid://dxynt56u880ym" path="res://assets/scenes/rock_thrower.tscn" id="4_nmovu"]
[ext_resource type="PackedScene" uid="uid://djmbu4rbud5of" path="res://CrowdMember.tscn" id="4_v1eul"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4k3a8"]
size = Vector2(320, 540)

[node name="EnvironmentalAreas" type="Node2D"]
script = ExtResource("1_ufwa4")

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(480, 270)

[node name="SnakeArea" type="Area2D" parent="Node2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/SnakeArea"]
shape = SubResource("RectangleShape2D_4k3a8")

[node name="Snake" parent="Node2D/SnakeArea" instance=ExtResource("2_gsgy3")]
position = Vector2(0, 106)

[node name="SnakeMeter" type="TextureProgressBar" parent="Node2D/SnakeArea" groups=["SnakeMeter"]]
modulate = Color(0.5, 100, 0.5, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.5
offset_top = -59.5
offset_right = 59.5
offset_bottom = 59.5
grow_horizontal = 2
grow_vertical = 2
step = 0.0
value = 50.0
fill_mode = 4
texture_progress = ExtResource("3_4uf4f")
script = ExtResource("3_kv1wc")
metadata/_edit_group_ = true

[node name="CrowdArea" type="Area2D" parent="Node2D"]
position = Vector2(-320, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/CrowdArea"]
shape = SubResource("RectangleShape2D_4k3a8")

[node name="AnimatedSprite2D" parent="Node2D/CrowdArea" instance=ExtResource("4_v1eul")]
position = Vector2(-106, 207)
frame_progress = 0.0

[node name="CharmMeter" type="TextureProgressBar" parent="Node2D/CrowdArea"]
modulate = Color(0.5, 100, 0.5, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -59.5
offset_top = -59.5
offset_right = 59.5
offset_bottom = 59.5
grow_horizontal = 2
grow_vertical = 2
step = 0.0
value = 50.0
fill_mode = 4
texture_progress = ExtResource("3_4uf4f")
script = ExtResource("3_kv1wc")
metadata/_edit_group_ = true

[node name="PlaceholderArea" type="Area2D" parent="Node2D"]
position = Vector2(320, 7.62939e-06)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/PlaceholderArea"]
shape = SubResource("RectangleShape2D_4k3a8")

[node name="AnimatedSprite2D2" parent="Node2D/PlaceholderArea" instance=ExtResource("4_v1eul")]
position = Vector2(106, 206)
frame_progress = 0.0
flip_h = true

[node name="PlaceholderMeter" type="TextureProgressBar" parent="Node2D/PlaceholderArea"]
modulate = Color(0.5, 100, 0.5, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -59.5
offset_top = -59.5
offset_right = 59.5
offset_bottom = 59.5
grow_horizontal = 2
grow_vertical = 2
step = 0.0
value = 50.0
fill_mode = 4
texture_progress = ExtResource("3_4uf4f")
script = ExtResource("3_kv1wc")

[node name="RockThrower" parent="." instance=ExtResource("4_nmovu")]
position = Vector2(6, 399)

[node name="RockThrower2" parent="." instance=ExtResource("4_nmovu")]
position = Vector2(488, 383)
ToTheLeft = true

[connection signal="body_entered" from="Node2D/SnakeArea" to="." method="_on_snake_area_body_entered"]
[connection signal="body_exited" from="Node2D/SnakeArea" to="." method="_on_snake_area_body_exited"]
[connection signal="bar_empty" from="Node2D/SnakeArea/SnakeMeter" to="." method="_on_snake_meter_bar_empty"]
[connection signal="value_changed" from="Node2D/SnakeArea/SnakeMeter" to="." method="_on_snake_meter_value_changed"]
[connection signal="value_changed" from="Node2D/SnakeArea/SnakeMeter" to="Node2D/SnakeArea/SnakeMeter" method="_on_value_changed"]
[connection signal="body_entered" from="Node2D/CrowdArea" to="." method="_on_crowd_area_body_entered"]
[connection signal="body_exited" from="Node2D/CrowdArea" to="." method="_on_crowd_area_body_exited"]
[connection signal="bar_empty" from="Node2D/CrowdArea/CharmMeter" to="." method="_on_charm_meter_bar_empty"]
[connection signal="value_changed" from="Node2D/CrowdArea/CharmMeter" to="." method="_on_charm_meter_value_changed"]
[connection signal="value_changed" from="Node2D/CrowdArea/CharmMeter" to="Node2D/CrowdArea/CharmMeter" method="_on_value_changed"]
[connection signal="body_entered" from="Node2D/PlaceholderArea" to="." method="_on_placeholder_area_body_entered"]
[connection signal="body_exited" from="Node2D/PlaceholderArea" to="." method="_on_placeholder_area_body_exited"]
[connection signal="bar_empty" from="Node2D/PlaceholderArea/PlaceholderMeter" to="." method="_on_place_holder_bar_empty"]
[connection signal="value_changed" from="Node2D/PlaceholderArea/PlaceholderMeter" to="." method="_on_place_holder_value_changed"]
[connection signal="value_changed" from="Node2D/PlaceholderArea/PlaceholderMeter" to="Node2D/PlaceholderArea/PlaceholderMeter" method="_on_value_changed"]
